test_output_func.txt
   Compiling ox_codegen v0.1.0 (/home/gefferson-souza/Desktop/personal-projects/TypeRust/crates/ox_codegen)
warning: unused variable: `call`
   --> crates/ox_codegen/src/convert/func.rs:323:40
    |
323 |                 else if let Expr::Call(call) = right_expr {
    |                                        ^^^^ help: if this is intentional, prefix it with an underscore: `_call`
    |
    = note: `#[warn(unused_variables)]` on by default

   Compiling ox_orchestrator v0.1.0 (/home/gefferson-souza/Desktop/personal-projects/TypeRust/crates/ox_orchestrator)
   Compiling integration_tests v0.1.0 (/home/gefferson-souza/Desktop/personal-projects/TypeRust/tests)
warning: `ox_codegen` (lib) generated 1 warning
warning: function `run_gauntlet_test` is never used
 --> tests/src/test_regression.rs:5:4
  |
5 | fn run_gauntlet_test(fixture_name: &str) {
  |    ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(dead_code)]` on by default

warning: `integration_tests` (lib) generated 1 warning
    Finished `test` profile [unoptimized + debuginfo] target(s) in 1.33s
     Running unittests src/lib.rs (target/debug/deps/integration_tests-726d51bf8feaca74)

running 1 test
Building complex_nestjs...
Method: check, is_handler: false, decorators: 0
Method: process, is_handler: false, decorators: 0
Method: create, is_handler: true, decorators: 1
Method: health, is_handler: true, decorators: 1
Verifying compilation for complex_nestjs...
    Updating crates.io index
    Blocking waiting for file lock on package cache
     Locking 184 packages to latest compatible versions
      Adding axum v0.7.9 (available: v0.8.7)
      Adding rand v0.8.5 (available: v0.9.2)
      Adding reqwest v0.11.27 (available: v0.12.24)
      Adding tower v0.4.13 (available: v0.5.2)
      Adding tower-http v0.5.2 (available: v0.6.7)
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
   Compiling proc-macro2 v1.0.103
   Compiling quote v1.0.42
   Compiling unicode-ident v1.0.22
   Compiling libc v0.2.177
    Checking cfg-if v1.0.4
    Checking bytes v1.11.0
    Checking pin-project-lite v0.2.16
    Checking smallvec v1.15.1
    Checking itoa v1.0.15
    Checking futures-core v0.3.31
   Compiling parking_lot_core v0.9.12
    Checking stable_deref_trait v1.2.1
    Checking once_cell v1.21.3
    Checking scopeguard v1.2.0
    Checking log v0.4.28
   Compiling find-msvc-tools v0.1.5
   Compiling shlex v1.3.0
    Checking lock_api v0.4.14
   Compiling vcpkg v0.2.15
    Checking tracing-core v0.1.35
   Compiling pkg-config v0.3.32
    Checking pin-utils v0.1.0
   Compiling serde_core v1.0.228
   Compiling cc v1.2.47
    Checking tower-service v0.3.3
    Checking litemap v0.8.1
    Checking writeable v0.6.2
    Checking futures-task v0.3.31
   Compiling httparse v1.10.1
    Checking futures-util v0.3.31
   Compiling icu_properties_data v2.1.1
    Checking http v1.4.0
   Compiling icu_normalizer_data v2.1.1
    Checking tracing v0.1.41
    Checking futures-channel v0.3.31
   Compiling serde v1.0.228
    Checking bitflags v2.10.0
   Compiling openssl v0.10.75
    Checking httpdate v1.0.3
    Checking foreign-types-shared v0.1.1
    Checking fnv v1.0.7
    Checking foreign-types v0.3.2
    Checking http v0.2.12
    Checking tower-layer v0.3.3
    Checking equivalent v1.0.2
   Compiling native-tls v0.2.14
   Compiling syn v2.0.111
    Checking hashbrown v0.16.1
   Compiling zerocopy v0.8.30
    Checking percent-encoding v2.3.2
    Checking futures-sink v0.3.31
    Checking http-body v1.0.1
    Checking form_urlencoded v1.2.2
   Compiling rustversion v1.0.22
    Checking mio v1.1.0
    Checking signal-hook-registry v1.4.7
    Checking socket2 v0.6.1
    Checking parking_lot v0.12.5
    Checking slab v0.4.11
    Checking openssl-probe v0.1.6
    Checking try-lock v0.2.5
    Checking ryu v1.0.20
   Compiling serde_json v1.0.145
    Checking indexmap v2.12.1
    Checking want v0.3.1
    Checking http-body-util v0.1.3
    Checking socket2 v0.5.10
    Checking http-body v0.4.6
    Checking getrandom v0.2.16
    Checking sync_wrapper v1.0.2
    Checking utf8_iter v1.0.4
    Checking mime v0.3.17
    Checking atomic-waker v1.1.2
    Checking memchr v2.7.6
    Checking rand_core v0.6.4
    Checking base64 v0.21.7
    Checking encoding_rs v0.8.35
   Compiling openssl-sys v0.9.111
    Checking sync_wrapper v0.1.2
    Checking matchit v0.7.3
    Checking ipnet v2.11.0
    Checking tower-http v0.5.2
    Checking rustls-pemfile v1.0.4
    Checking tower v0.4.13
    Checking serde_path_to_error v0.1.20
    Checking ppv-lite86 v0.2.21
    Checking rand_chacha v0.3.1
    Checking rand v0.8.5
   Compiling synstructure v0.13.2
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.8.1
   Compiling zerovec-derive v0.11.2
   Compiling displaydoc v0.2.5
   Compiling tokio-macros v2.6.0
   Compiling serde_derive v1.0.228
   Compiling openssl-macros v0.1.1
   Compiling async-trait v0.1.89
    Checking tokio v1.48.0
    Checking axum-core v0.4.5
    Checking zerofrom v0.1.6
    Checking yoke v0.8.1
    Checking zerotrie v0.2.3
    Checking zerovec v0.11.5
    Checking tinystr v0.8.2
    Checking potential_utf v0.1.4
    Checking icu_collections v2.1.1
    Checking icu_locale_core v2.1.1
    Checking icu_provider v2.1.1
    Checking icu_normalizer v2.1.1
    Checking icu_properties v2.1.1
    Checking serde_urlencoded v0.7.1
    Checking idna_adapter v1.2.1
    Checking idna v1.1.0
    Checking url v2.5.7
    Checking tokio-util v0.7.17
    Checking tokio-native-tls v0.3.1
    Checking hyper v1.8.1
    Checking tower v0.5.2
    Checking h2 v0.3.27
    Checking hyper-util v0.1.18
    Checking axum v0.7.9
    Checking hyper v0.14.32
    Checking hyper-tls v0.5.0
    Checking reqwest v0.11.27
    Checking typerust_app v0.1.0 (/home/gefferson-souza/Desktop/personal-projects/TypeRust/tests/fixtures/complex_nestjs/dist)
warning: unreachable block in `if` or `while` expression
 --> src/services/payment_service.rs:5:447
  |
5 | ...etAccount) ; if todo ! () { return Ok (String :: from ("BLOCKED")) ; } return Ok (String :: from ("PROCESSED_") + (dto . amount) . rou...
  |                    --------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable block in `if` or `while` expression
  |                    |
  |                    any code following this expression is unreachable
  |
  = note: `#[warn(unreachable_code)]` on by default

error[E0308]: mismatched types
 --> src/services/payment_service.rs:5:535
  |
5 | ...urn Ok (String :: from ("PROCESSED_") + (dto . amount) . round ()) ; } }
  |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `f64`

For more information about this error, try `rustc --explain E0308`.
warning: `typerust_app` (lib) generated 1 warning
error: could not compile `typerust_app` (lib) due to 1 previous error; 1 warning emitted

thread 'test_regression::test_scenario_3_complex_nestjs' panicked at tests/src/test_regression.rs:26:5:
Cargo check failed for complex_nestjs
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
test test_regression::test_scenario_3_complex_nestjs ... FAILED

failures:

failures:
    test_regression::test_scenario_3_complex_nestjs

test result: FAILED. 0 passed; 1 failed; 0 ignored; 0 measured; 29 filtered out; finished in 13.42s

error: test failed, to rerun pass `-p integration_tests --lib`
